# Kinect-Fusion

./: .gitignore  CMakeLists.txt  ICPOptimizer.h  LICENSE  MarchingCubes.h  PointCloud.h  README.md  SimpleMesh.h  VirtualSensor.h  Volume.h  main.cpp  render.h
.github/workflows/: cmake.yml
icp/: ICPOptimizer.h
imageLoader/: FreeImageHelper.cpp  FreeImageHelper.h  VirtualSensor.h
include/: FreeImageHelper.h  Fusion.h  ICPOptimizer.h  MarchingCubes.h  PointCloud.h  ProcrustesAligner.h  RayCaster.h  SimpleMesh.h  TSDF.h  TsdfVolumn.h  VirtualSensor.h  Volume.h
raycaster/: RayCaster.h
src/: FreeImageHelper.cpp  TSDF.cpp  TsdfVolumn.cpp  Volume.cpp
utils/: NearestNeighbor.h
